--- a/package.xml
+++ b/package.xml
@@ -30,7 +30,7 @@
  </lead>
  <date>2018-11-19</date>
  <version>
-  <release>5.1.13</release>
+  <release>5.1.14dev</release>
   <api>5.1.13</api>
  </version>
  <stability>
@@ -39,16 +39,7 @@
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
-- Reimplement persistence logic using precise allocation rather than memory pools. This reduces
-memory usage of cache entries, especially for small values, and improves performance of persisting
-and unpersisting values.
-- Fixed GH #335: Stampede protection is broken.
-- Fixed GH #328: Segfault in apcu_key_info() if APCu is disabled.
-- Generally make the behavior of functions if APCu is disabled more consistent.
-- Fixed PHP bug #72980: Empty strings are now consistently allowed as cache keys.
-- Optimized apcu_key_info() and apcu_cache_info() by using interned strings.
-- Fix build against PHP master (PHP 7.4).
-- Many changes to internal C APIs.
+-
  </notes>
  <contents>
   <dir name="/">
@@ -177,6 +168,30 @@ and unpersisting values.
   <configureoption name="enable-apcu-debug" default="no" prompt="Enable internal debugging in APCu" />
  </extsrcrelease>
  <changelog>
+  <release>
+   <date>2018-11-19</date>
+   <version>
+    <release>5.1.13</release>
+    <api>5.1.13</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+- Reimplement persistence logic using precise allocation rather than memory pools. This reduces
+memory usage of cache entries, especially for small values, and improves performance of persisting
+and unpersisting values.
+- Fixed GH #335: Stampede protection is broken.
+- Fixed GH #328: Segfault in apcu_key_info() if APCu is disabled.
+- Generally make the behavior of functions if APCu is disabled more consistent.
+- Fixed PHP bug #72980: Empty strings are now consistently allowed as cache keys.
+- Optimized apcu_key_info() and apcu_cache_info() by using interned strings.
+- Fix build against PHP master (PHP 7.4).
+- Many changes to internal C APIs.
+   </notes>
+  </release>
   <release>
    <date>2018-07-09</date>
    <version>
