--- a/package.xml
+++ b/package.xml
@@ -31,7 +31,7 @@
  <date>2018-11-19</date>
  <version>
   <release>5.1.14dev</release>
-  <api>5.1.13</api>
+  <api>5.1.14</api>
  </version>
  <stability>
   <release>stable</release>
@@ -39,7 +39,10 @@
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
--
+- Fixed GH #347: Disable slam defense by default.
+- Fix potential issue with destruction of locks. This does not affect Linux, but might affect Windows and BSD.
+- Use mutex instead of rwlock for shared memory allocator (if pthreads mutex available).
+- Require only read-lock for apcu_cas(), by using atomic compare-and-swap.
  </notes>
  <contents>
   <dir name="/">
