Don't use valgrind on PHP >= 7.3
This would require a suppression on zend_string_equal_val, which
I'm not sure how to provide via run-tests.php.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
 language: php
 
-php:
-    - 7.0
-    - 7.1
-    - 7.2
-    - 7.3
-    - nightly
+matrix:
+    include:
+        - php: 7.0
+          env: USE_VALGRIND=1
+        - php: 7.1
+          env: USE_VALGRIND=1
+        - php: 7.2
+          env: USE_VALGRIND=1
+        - php: 7.3
+        - php: nightly
 
 addons:
     apt:
@@ -28,5 +32,5 @@ script:
     - REPORT_EXIT_STATUS=1 php -n run-tests.php -n -d extension_dir=./modules/ -d extension=apcu.so -d apc.enable_cli=1 -d apc.serializer=default -d opcache.enable_cli=1 -P --show-diff --set-timeout 120
     - REPORT_EXIT_STATUS=1 php -n run-tests.php -n -d extension_dir=./modules/ -d extension=apcu.so -d apc.enable_cli=1 -d apc.serializer=php -d opcache.enable_cli=1 -P --show-diff --set-timeout 120
     # Run under valgrind with default configuration
-    - REPORT_EXIT_STATUS=1 php -n run-tests.php -m -n -d extension_dir=./modules/ -d extension=apcu.so -d apc.enable_cli=1 -P --show-diff --set-timeout 120
+    - if [ -n "$USE_VALGRIND" ]; then REPORT_EXIT_STATUS=1 php -n run-tests.php -m -n -d extension_dir=./modules/ -d extension=apcu.so -d apc.enable_cli=1 -P --show-diff --set-timeout 120; fi
 
