--- a/package.xml
+++ b/package.xml
@@ -28,9 +28,9 @@
   <email>nikic@php.net</email>
   <active>yes</active>
  </lead>
- <date>2018-12-07</date>
+ <date>2018-12-16</date>
  <version>
-  <release>5.1.16dev</release>
+  <release>5.1.16</release>
   <api>5.1.15</api>
  </version>
  <stability>
@@ -39,7 +39,7 @@
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
--
+- Fix build on OSX.
  </notes>
  <contents>
   <dir name="/">
