--- a/package.xml
+++ b/package.xml
@@ -30,7 +30,7 @@
  </lead>
  <date>2019-02-08</date>
  <version>
-  <release>5.1.17</release>
+  <release>5.1.18dev</release>
   <api>5.1.15</api>
  </version>
  <stability>
@@ -39,7 +39,7 @@
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
-- Fixed compatibility with PHP 7.4 and PHP 8.0.
+-
  </notes>
  <contents>
   <dir name="/">
@@ -173,6 +173,21 @@
   <configureoption name="enable-apcu-debug" default="no" prompt="Enable internal debugging in APCu" />
  </extsrcrelease>
  <changelog>
+  <release>
+   <date>2019-02-08</date>
+   <version>
+    <release>5.1.17</release>
+    <api>5.1.15</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+- Fixed compatibility with PHP 7.4 and PHP 8.0.
+   </notes>
+  </release>
   <release>
    <date>2018-12-16</date>
    <version>
