--- a/package.xml
+++ b/package.xml
@@ -39,7 +39,11 @@
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
--
+- Implement apcu_inc() and apcu_dec() using atomic operations. This means that these functions no longer have to acquire a write lock. These functions will now wraparound on overflow, instead of saturating to a floating point value.
+- Make table header in apc.php sticky.
+- Fix compile warnings related to mktemp() usage.
+- Fix compatibility with PHP 8.0.
+- Fix required number of arguments for apcu_store() returned by Reflection.
  </notes>
  <contents>
   <dir name="/">
