--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ matrix:
         - php: 7.2
           env: USE_VALGRIND=1
         - php: 7.3
-        - php: 7.4-snapshot
+        - php: 7.4snapshot
         - php: nightly
 
 addons:
