Move installation steps to install.ps1
We also execute run-tests.php manually, instead of doing the "task"
dance.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,7 @@ install:
         ps: .appveyor\install.ps1
 
 cache:
-        c:\build-cache -> appveyor.yml, .appveyor\install.ps1, .appveyor\build.ps1, .appveyor\test.ps1
+        c:\build-cache -> appveyor.yml, .appveyor\install.ps1
 
 environment:
         BIN_SDK_VER: 2.1.1
