--- a/package.xml
+++ b/package.xml
@@ -28,9 +28,9 @@
   <email>nikic@php.net</email>
   <active>yes</active>
  </lead>
- <date>2019-10-28</date>
+ <date>2020-10-05</date>
  <version>
-  <release>5.1.19dev</release>
+  <release>5.1.19</release>
   <api>5.1.18</api>
  </version>
  <stability>
@@ -82,7 +82,9 @@
     <file name="apc_entry_002.phpt" role="test" />
     <file name="apc_entry_003.phpt" role="test" />
     <file name="apc_inc_perf.phpt" role="test" />
+    <file name="apc_store_array_int_keys.phpt" role="test" />
     <file name="apc_store_reference.phpt" role="test" />
+    <file name="apc_store_reference_php8.phpt" role="test" />
     <file name="apcu_sma_info.phpt" role="test" />
     <file name="bug63224.phpt" role="test" />
     <file name="bug76145.phpt" role="test" />
@@ -116,6 +118,9 @@
    </dir>
    <file name="apc_api.h" role="src" />
    <file name="apc_arginfo.h" role="src" />
+   <file name="php_apc.stub.php" role="src" />
+   <file name="php_apc_arginfo.h" role="src" />
+   <file name="php_apc_legacy_arginfo.h" role="src" />
    <file name="apc.c" role="src" />
    <file name="apc_cache_api.h" role="src" />
    <file name="apc_cache.c" role="src" />
@@ -124,6 +129,9 @@
    <file name="apc.h" role="src" />
    <file name="apc_iterator.c" role="src" />
    <file name="apc_iterator.h" role="src" />
+   <file name="apc_iterator.stub.php" role="src" />
+   <file name="apc_iterator_arginfo.h" role="src" />
+   <file name="apc_iterator_legacy_arginfo.h" role="src" />
    <file name="apc_lock_api.h" role="src" />
    <file name="apc_lock.c" role="src" />
    <file name="apc_lock.h" role="src" />
