--- a/appveyor.yml
+++ b/appveyor.yml
@@ -86,6 +86,26 @@ environment:
       VC: vc15
       PHP_VER: 7.4
       TS: 1
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+      ARCH: x64
+      VC: vs16
+      PHP_VER: 8.0
+      TS: 0
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+      ARCH: x64
+      VC: vs16
+      PHP_VER: 8.0
+      TS: 1
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+      ARCH: x86
+      VC: vs16
+      PHP_VER: 8.0
+      TS: 0
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+      ARCH: x86
+      VC: vs16
+      PHP_VER: 8.0
+      TS: 1
 
 build_script:
   ps: .appveyor\build.ps1
