--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -16,11 +16,13 @@ jobs:
       - name: phpize
         run: phpize
       - name: configure
-        run: ./configure --enable-apcu
+        run: ./configure --enable-apcu-debug
       - name: make
         run: make
       - name: test
-        run: make test TESTS="--show-diff tests"
+        run: |
+            make test TESTS="--show-diff -d apc.serializer=default tests"
+            make test TESTS="--show-diff -d apc.serializer=php tests"
   windows:
     defaults:
       run:
