Test with and without opcache

--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -23,6 +23,8 @@ jobs:
         run: |
             make test TESTS="--show-diff -d apc.serializer=default tests"
             make test TESTS="--show-diff -d apc.serializer=php tests"
+            make test TESTS="--show-diff -d apc.serializer=default -d opcache.enable_cli=1 tests"
+            make test TESTS="--show-diff -d apc.serializer=php -d opcache.enable_cli=1 tests"
   windows:
     defaults:
       run:
